Some links changes

--- a/angular-app-demo/src/app/app.component.html
+++ b/angular-app-demo/src/app/app.component.html
@@ -113,7 +113,7 @@
       class="card"
       target="_blank"
       rel="noopener"
-      href="https://github.com/SkillsWorkflow/recruiting-challenges/blob/main/AngularChallenge.md"
+      href="https://github.com/vitorjoaofg/skills-Workflow-Solution/tree/master/lib-workspace"
     >
       <svg
         class="material-icons"
@@ -142,7 +142,7 @@
       class="card"
       target="_blank"
       rel="noopener"
-      href="https://github.com/SkillsWorkflow/recruiting-challenges/blob/main/AngularChallenge.md"
+      href="https://github.com/vitorjoaofg/skills-Workflow-Solution/tree/master/WebAPI"
     >
       <svg
         class="material-icons"
